[FIX] core.Popup: correctly align Blocklayer with within area in RTL mode
- In RTL mode, the "right" and "bottom" CSS property on the Blocklayer
  needs to be changed from "0" to "auto" before the Blocklayer is
  aligned with the within area.

- Popups' unit tests also run under RTL mode now

BCP: 2280154052

--- a/src/sap.ui.core/src/sap/ui/core/themes/base/shared.less
+++ b/src/sap.ui.core/src/sap/ui/core/themes/base/shared.less
@@ -76,6 +76,12 @@ link[id^="sap-ui-theme-"]::after,
 	outline: 0 none;
 }
 
+.sapUiBLyWithin {
+	left: auto;
+	right: auto;
+	top: auto;
+	bottom: auto;
+}
 .sapUiBLyBack{
 	/* to prevent HTML page from scrolling if blocked */
 	overflow: hidden;
